minor fix in OS X dmg

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-05-30 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Minor fix in OS X dmg
+
 2011-05-25 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added water sounds settings to GUI.
