--- a/liquidwar6/doc/network-selfdoc.texi
+++ b/liquidwar6/doc/network-selfdoc.texi
@@ -133,7 +133,7 @@ requests.
 @deffnx {XML key} @code{skip-network}
 Type: boolean
 
-Default value: false
+Default value: true
 
 If set, then game won't do anything network related. No listen, no connect, no
 nothing. You are playing locally.
