--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-06-03 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed compilation bug on win32 (net-tcp.c).
+
 2011-06-01 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Network disabled by default for next release.
