--- a/liquidwar6/po/nn.po
+++ b/liquidwar6/po/nn.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: liquidwar6\n"
 "Report-Msgid-Bugs-To: ufoot@ufoot.org\n"
-"POT-Creation-Date: 2011-05-25 21:44+0200\n"
+"POT-Creation-Date: 2011-06-03 08:34+0200\n"
 "PO-Revision-Date: 2010-09-09 19:27+0100\n"
 "Last-Translator: Karl Ove Hufthammer <karl@huftis.org>\n"
 "Language-Team: Norwegian Nynorsk <i18n-nn@lister.ping.uio.no>\n"
@@ -332,531 +332,564 @@ msgid "test FAILED, see log file \"%s\" for details"
 msgstr "test feila (sjå loggfila «%s» for meir informasjon)"
 
 #: src/scriptpo.c:1
-msgid "Local game"
-msgstr "Lokalt spel"
+msgid "One life (last wins)"
+msgstr "Eitt liv (den siste vinn)"
 
 #: src/scriptpo.c:2
-msgid "Join network game"
-msgstr "Vert med i nettverksspel"
+msgid "Respawn (deatchmatch)"
+msgstr "Attfødingsmodus (daudskamp)"
 
 #: src/scriptpo.c:3
-msgid "Start server"
-msgstr "Start tenar"
+msgid "Cursors can have any color"
+msgstr "Peikarane kan ha vilkårleg farge"
 
 #: src/scriptpo.c:4
-msgid "Demo"
-msgstr "Demo"
+msgid "Can collaborate locally"
+msgstr "Kan samarbeida lokalt"
 
 #: src/scriptpo.c:5
-msgid "Back to main menu"
-msgstr "Tilbake til hovudmenyen"
+msgid "One cursor per team"
+msgstr "Éin peikar per lag"
 
-#: src/scriptpo.c:6 src/scriptpo.c:7 src/scriptpo.c:122
-msgid "Play"
-msgstr "Spel"
+#: src/scriptpo.c:6 src/scriptpo.c:102
+msgid "Rules"
+msgstr "Reglar"
 
-#: src/scriptpo.c:8 src/scriptpo.c:9
-msgid "Please wait..."
-msgstr "Vent litt …"
+#: src/scriptpo.c:7
+msgid "Esc"
+msgstr "Esc"
 
-#: src/scriptpo.c:10 src/scriptpo.c:123
+#: src/scriptpo.c:8
+msgid "red"
+msgstr "raud"
+
+#: src/scriptpo.c:9
+msgid "green"
+msgstr "grøn"
+
+#: src/scriptpo.c:10
+msgid "blue"
+msgstr "blå"
+
+#: src/scriptpo.c:11
+msgid "yellow"
+msgstr "gul"
+
+#: src/scriptpo.c:12
+msgid "cyan"
+msgstr "cyanblå"
+
+#: src/scriptpo.c:13
+msgid "magenta"
+msgstr "magentaraud"
+
+#: src/scriptpo.c:14
+msgid "orange"
+msgstr "oransje"
+
+#: src/scriptpo.c:15
+msgid "light blue"
+msgstr "lyseblå"
+
+#: src/scriptpo.c:16
+msgid "purple"
+msgstr "lilla"
+
+#: src/scriptpo.c:17
+msgid "pink"
+msgstr "rosa"
+
+#: src/scriptpo.c:18 src/scriptpo.c:97
 msgid "Choose map"
 msgstr "Vel kart"
 
-#: src/scriptpo.c:11
+#: src/scriptpo.c:19
+msgid "Time ~a:~a~a:~a~a"
+msgstr "Tid ~a.~a~a.~a~a"
+
+#: src/scriptpo.c:20
+msgid "Default speed"
+msgstr "Standardfart"
+
+#: src/scriptpo.c:21
+msgid "Speed x~a"
+msgstr "Fart x~a"
+
+#: src/scriptpo.c:22
+msgid "Speed ~a%"
+msgstr "Fart ~a %"
+
+#: src/scriptpo.c:23
+msgid "Unknown speed"
+msgstr "Ukjend fart"
+
+#: src/scriptpo.c:24
+msgid "Bench ~a"
+msgstr ""
+
+#: src/scriptpo.c:25 src/scriptpo.c:101
+msgid "Time & speed"
+msgstr "Tid og fart"
+
+#: src/scriptpo.c:26
 msgid "running \"~a\""
 msgstr "køyrer «~a»"
 
-#: src/scriptpo.c:12
+#: src/scriptpo.c:27
 msgid "log file \"~a\""
 msgstr "loggfila «~a»"
 
-#: src/scriptpo.c:13 src/scriptpo.c:14
+#: src/scriptpo.c:28 src/scriptpo.c:29
 msgid "environment \"~a\" is \"~a\""
 msgstr "omgjevnaden «~a» er «~a»"
 
-#: src/scriptpo.c:15
+#: src/scriptpo.c:30
 msgid "upgrading to version ~a"
 msgstr "oppgraderer til versjon ~a"
 
-#: src/scriptpo.c:16
+#: src/scriptpo.c:31
 msgid "no graphical backend found, game can only run in server mode"
 msgstr ""
 "Fann ikkje nokon grafikkmotor. Spelet kan berre køyrast i rein tenar/konsoll-"
 "modus."
 
-#: src/scriptpo.c:17
+#: src/scriptpo.c:32
 msgid "running in server mode"
 msgstr "køyrer i tenarmodus"
 
-#: src/scriptpo.c:18
-msgid "One life (last wins)"
-msgstr "Eitt liv (den siste vinn)"
-
-#: src/scriptpo.c:19
-msgid "Respawn (deatchmatch)"
-msgstr "Attfødingsmodus (daudskamp)"
-
-#: src/scriptpo.c:20
-msgid "Cursors can have any color"
-msgstr "Peikarane kan ha vilkårleg farge"
-
-#: src/scriptpo.c:21
-msgid "Can collaborate locally"
-msgstr "Kan samarbeida lokalt"
-
-#: src/scriptpo.c:22
-msgid "One cursor per team"
-msgstr "Éin peikar per lag"
-
-#: src/scriptpo.c:23 src/scriptpo.c:68
-msgid "Rules"
-msgstr "Reglar"
-
-#: src/scriptpo.c:24
+#: src/scriptpo.c:33
 msgid "Armies ~a% - ~a%"
 msgstr "Styrker ~a% – ~a%"
 
-#: src/scriptpo.c:25
+#: src/scriptpo.c:34
 msgid "Keep map ratio"
 msgstr "Behald høgd/breidd-forhold"
 
-#: src/scriptpo.c:26
+#: src/scriptpo.c:35
 msgid "Fit map to screen"
 msgstr "Tilpass kartet til skjermen"
 
-#: src/scriptpo.c:27
+#: src/scriptpo.c:36
 msgid "Use texture"
 msgstr "Brk teksturar"
 
-#: src/scriptpo.c:28
+#: src/scriptpo.c:37
 msgid "Ignore texture"
 msgstr "Ignorer teksturar"
 
-#: src/scriptpo.c:29
+#: src/scriptpo.c:38
 msgid "Use XML files"
 msgstr "Bruk XML-filer"
 
-#: src/scriptpo.c:30
+#: src/scriptpo.c:39
 msgid "Ignore XML files"
 msgstr "Ignorer XML-filer"
 
-#: src/scriptpo.c:31
+#: src/scriptpo.c:40
 msgid "Use ~a"
 msgstr "Bruk ~a"
 
-#: src/scriptpo.c:32
+#: src/scriptpo.c:41
 msgid " and "
 msgstr " og "
 
-#: src/scriptpo.c:33
+#: src/scriptpo.c:42
 msgid "Map options"
 msgstr "Kartoppsett"
 
-#: src/scriptpo.c:34
+#: src/scriptpo.c:43 src/scriptpo.c:137
 msgid "Fullscreen"
 msgstr "Fullskjerm"
 
-#: src/scriptpo.c:35
+#: src/scriptpo.c:44
 msgid "Windowed"
 msgstr "Vindauge"
 
-#: src/scriptpo.c:36
+#: src/scriptpo.c:45
 msgid "Low res"
 msgstr "Låg oppløysing"
 
-#: src/scriptpo.c:37
+#: src/scriptpo.c:46
 msgid "Standard res"
 msgstr "Standard oppløysing"
 
-#: src/scriptpo.c:38
+#: src/scriptpo.c:47
 msgid "High res"
 msgstr "Høg oppløysing"
 
-#: src/scriptpo.c:39
+#: src/scriptpo.c:48
 msgid "User res"
 msgstr "Brukaroppløysing"
 
-#: src/scriptpo.c:40 src/scriptpo.c:101
+#: src/scriptpo.c:49 src/scriptpo.c:162
 msgid "Backend ~a"
 msgstr "Motor ~a"
 
-#: src/scriptpo.c:41
+#: src/scriptpo.c:50
 msgid "Video options"
 msgstr "Videooppsett"
 
-#: src/scriptpo.c:42
-msgid "Mouse"
-msgstr "Mus"
+#: src/scriptpo.c:51 src/scriptpo.c:115
+msgid "Local game"
+msgstr "Lokalt spel"
 
-#: src/scriptpo.c:43
-msgid "Keyboard"
-msgstr "Tastatur"
-
-#: src/scriptpo.c:44
-msgid "Joystick 1"
-msgstr "Styrespak 1"
-
-#: src/scriptpo.c:45
-msgid "Joystick 2"
-msgstr "Styrespak 2"
-
-#: src/scriptpo.c:46
-msgid "Custom"
-msgstr "Tilpassa"
-
-#: src/scriptpo.c:47 src/scriptpo.c:52
-msgid "~a (mouse)"
-msgstr "~a (mus)"
-
-#: src/scriptpo.c:48
-msgid "~a (keyb)"
-msgstr "~a (tastar)"
-
-#: src/scriptpo.c:49
-msgid "~a (joy1)"
-msgstr "~a (spak1)"
-
-#: src/scriptpo.c:50
-msgid "~a (joy2)"
-msgstr "~a (spak2)"
-
-#: src/scriptpo.c:51
-msgid "~a (custom)"
-msgstr "~a (tilpassa)"
+#: src/scriptpo.c:52
+msgid "Join network game"
+msgstr "Vert med i nettverksspel"
 
 #: src/scriptpo.c:53
-msgid "no gfx backend found"
-msgstr "fann ikkje nokon grafikkmotor"
+msgid "Start server"
+msgstr "Start tenar"
 
 #: src/scriptpo.c:54
-msgid "no snd backend found"
-msgstr "fann ikkje nokon lydmotor"
+msgid "Demo"
+msgstr "Demo"
 
 #: src/scriptpo.c:55
-msgid "gfx backend ~a not available"
-msgstr "grafikkmotoren ~a er ikkje tilgjengeleg"
+msgid "Back to main menu"
+msgstr "Tilbake til hovudmenyen"
 
-#: src/scriptpo.c:56
-msgid "snd backend ~a not available"
-msgstr "lydmotoren ~a er ikkje tilgjengeleg"
-
-#: src/scriptpo.c:57
-msgid "Quit"
-msgstr "Avslutt"
+#: src/scriptpo.c:56 src/scriptpo.c:57 src/scriptpo.c:96
+msgid "Play"
+msgstr "Spel"
 
 #: src/scriptpo.c:58
-msgid "Resume"
-msgstr "Hald fram"
-
-#: src/scriptpo.c:59
-msgid "Quit Liquid War 6?"
-msgstr "Vil du avslutta Liquid War 6?"
-
-#: src/scriptpo.c:60
-msgid "Time ~a:~a~a:~a~a"
-msgstr "Tid ~a.~a~a.~a~a"
-
-#: src/scriptpo.c:61
-msgid "Default speed"
-msgstr "Standardfart"
-
-#: src/scriptpo.c:62
-msgid "Speed x~a"
-msgstr "Fart x~a"
-
-#: src/scriptpo.c:63
-msgid "Speed ~a%"
-msgstr "Fart ~a %"
-
-#: src/scriptpo.c:64
-msgid "Unknown speed"
-msgstr "Ukjend fart"
-
-#: src/scriptpo.c:65
-msgid "Bench ~a"
-msgstr ""
-
-#: src/scriptpo.c:66 src/scriptpo.c:67
-msgid "Time & speed"
-msgstr "Tid og fart"
-
-#: src/scriptpo.c:69
-msgid "Map"
-msgstr "Kart"
-
-#: src/scriptpo.c:70
-msgid "Video"
-msgstr "Video"
-
-#: src/scriptpo.c:71
-msgid "Sound"
-msgstr "Lyd"
-
-#: src/scriptpo.c:72
-msgid "System"
-msgstr "System"
-
-#: src/scriptpo.c:73
-msgid "Stop current game"
-msgstr "Stopp spelet"
-
-#: src/scriptpo.c:74 src/scriptpo.c:75 src/scriptpo.c:125
-msgid "Options"
-msgstr "Oppsett"
-
-#: src/scriptpo.c:76
-msgid "red"
-msgstr "raud"
-
-#: src/scriptpo.c:77
-msgid "green"
-msgstr "grøn"
-
-#: src/scriptpo.c:78
-msgid "blue"
-msgstr "blå"
-
-#: src/scriptpo.c:79
-msgid "yellow"
-msgstr "gul"
-
-#: src/scriptpo.c:80
-msgid "cyan"
-msgstr "cyanblå"
-
-#: src/scriptpo.c:81
-msgid "magenta"
-msgstr "magentaraud"
-
-#: src/scriptpo.c:82
-msgid "orange"
-msgstr "oransje"
-
-#: src/scriptpo.c:83
-msgid "light blue"
-msgstr "lyseblå"
-
-#: src/scriptpo.c:84
-msgid "purple"
-msgstr "lilla"
-
-#: src/scriptpo.c:85
-msgid "pink"
-msgstr "rosa"
-
-#: src/scriptpo.c:86
-msgid "This is a test node."
-msgstr "Dette er ein testnode."
-
-#: src/scriptpo.c:87
-msgid "testing map"
-msgstr "testar kart"
-
-#: src/scriptpo.c:88
-msgid "testing game struct"
-msgstr "testar spelstruct"
-
-#: src/scriptpo.c:89
-msgid "testing game state"
-msgstr "testar speltilstand"
-
-#: src/scriptpo.c:90
-msgid "testing pilot"
-msgstr "testar pilot"
-
-#: src/scriptpo.c:91
-msgid "testing bot"
-msgstr "testar bot"
-
-#: src/scriptpo.c:92
-msgid "testing smobs GC, step 1"
-msgstr "testar smobs GC – steg 1"
-
-#: src/scriptpo.c:93
-msgid "testing smobs GC, step 2"
-msgstr "testar smobs GC – steg 2"
-
-#: src/scriptpo.c:94
-msgid "testing async load"
-msgstr "testar async-last"
-
-#: src/scriptpo.c:95
-msgid "testing db"
-msgstr "testar database"
-
-#: src/scriptpo.c:96
-msgid "testing node"
-msgstr "testar node"
-
-#: src/scriptpo.c:97
-msgid "No sound FX"
-msgstr "Ingen lydeffektar"
-
-#: src/scriptpo.c:98
-msgid "Sound FX ~a%"
-msgstr "Lydeffekt ~a%"
-
-#: src/scriptpo.c:99
-msgid "No music"
-msgstr "Ingen musikk"
-
-#: src/scriptpo.c:100
-msgid "Music ~a%"
-msgstr "Musikk ~a%"
-
-#: src/scriptpo.c:102
-msgid "Sound options"
-msgstr "Lydoppsett"
-
-#: src/scriptpo.c:103
-msgid "begin main game loop"
-msgstr "start på hovudlykkje"
-
-#: src/scriptpo.c:104
-msgid "scheme error"
-msgstr "Scheme-feil"
-
-#: src/scriptpo.c:105
-msgid "running scheme code with Guile"
-msgstr "køyrer Scheme-kode med Guile"
-
-#: src/scriptpo.c:106
-msgid "leaving Guile"
-msgstr "forlèt Guile"
-
-#: src/scriptpo.c:107
-msgid "catched Guile error"
-msgstr "fanga Guile-feil"
-
-#: src/scriptpo.c:108
-msgid "Display FPS"
-msgstr "Vis biletrate"
-
-#: src/scriptpo.c:109
-msgid "FPS hidden"
-msgstr "Biletrate gøymd"
-
-#: src/scriptpo.c:110
-msgid "Display MPS"
-msgstr "Vis biletrate"
-
-#: src/scriptpo.c:111
-msgid "MPS hidden"
-msgstr "Biletrate gøymd"
-
-#: src/scriptpo.c:112
-msgid "Console enabled"
-msgstr "Konsoll på"
-
-#: src/scriptpo.c:113
-msgid "Console disabled"
-msgstr "Konsoll av"
-
-#: src/scriptpo.c:114
-msgid "System options"
-msgstr "Systemval"
-
-#: src/scriptpo.c:115
 msgid "Unknown bot"
 msgstr "Ukjend bot"
 
-#: src/scriptpo.c:116
+#: src/scriptpo.c:59
 msgid "Not playing"
 msgstr "Spelar ikkje"
 
-#: src/scriptpo.c:117
+#: src/scriptpo.c:60
 msgid "Playing"
 msgstr "Spelar"
 
-#: src/scriptpo.c:118
+#: src/scriptpo.c:61
+msgid "scheme error"
+msgstr "Scheme-feil"
+
+#: src/scriptpo.c:62
+msgid "running scheme code with Guile"
+msgstr "køyrer Scheme-kode med Guile"
+
+#: src/scriptpo.c:63
+msgid "leaving Guile"
+msgstr "forlèt Guile"
+
+#: src/scriptpo.c:64
+msgid "catched Guile error"
+msgstr "fanga Guile-feil"
+
+#: src/scriptpo.c:65
 msgid "Free slot"
 msgstr "Ledig plass"
 
-#: src/scriptpo.c:119 src/scriptpo.c:124
+#: src/scriptpo.c:66 src/scriptpo.c:98
 msgid "Players"
 msgstr "Spelarar"
 
-#: src/scriptpo.c:120
-msgid "Esc"
-msgstr "Esc"
+#: src/scriptpo.c:67
+msgid "This is a test node."
+msgstr "Dette er ein testnode."
 
-#: src/scriptpo.c:121
+#: src/scriptpo.c:68
+msgid "testing map"
+msgstr "testar kart"
+
+#: src/scriptpo.c:69
+msgid "testing game struct"
+msgstr "testar spelstruct"
+
+#: src/scriptpo.c:70
+msgid "testing game state"
+msgstr "testar speltilstand"
+
+#: src/scriptpo.c:71
+msgid "testing pilot"
+msgstr "testar pilot"
+
+#: src/scriptpo.c:72
+msgid "testing bot"
+msgstr "testar bot"
+
+#: src/scriptpo.c:73
+msgid "testing smobs GC, step 1"
+msgstr "testar smobs GC – steg 1"
+
+#: src/scriptpo.c:74
+msgid "testing smobs GC, step 2"
+msgstr "testar smobs GC – steg 2"
+
+#: src/scriptpo.c:75
+msgid "testing async load"
+msgstr "testar async-last"
+
+#: src/scriptpo.c:76
+msgid "testing db"
+msgstr "testar database"
+
+#: src/scriptpo.c:77
+msgid "testing node"
+msgstr "testar node"
+
+#: src/scriptpo.c:78 src/scriptpo.c:79
+msgid "Please wait..."
+msgstr "Vent litt …"
+
+#: src/scriptpo.c:80
+msgid "Quit"
+msgstr "Avslutt"
+
+#: src/scriptpo.c:81
+msgid "Resume"
+msgstr "Hald fram"
+
+#: src/scriptpo.c:82
+msgid "Quit Liquid War 6?"
+msgstr "Vil du avslutta Liquid War 6?"
+
+#: src/scriptpo.c:83
+msgid "Display FPS"
+msgstr "Vis biletrate"
+
+#: src/scriptpo.c:84
+msgid "FPS hidden"
+msgstr "Biletrate gøymd"
+
+#: src/scriptpo.c:85
+msgid "Display MPS"
+msgstr "Vis biletrate"
+
+#: src/scriptpo.c:86
+msgid "MPS hidden"
+msgstr "Biletrate gøymd"
+
+#: src/scriptpo.c:87
+msgid "Console enabled"
+msgstr "Konsoll på"
+
+#: src/scriptpo.c:88
+msgid "Console disabled"
+msgstr "Konsoll av"
+
+#: src/scriptpo.c:89
+msgid "System options"
+msgstr "Systemval"
+
+#: src/scriptpo.c:90
+msgid "begin main game loop"
+msgstr "start på hovudlykkje"
+
+#: src/scriptpo.c:91
+msgid "no gfx backend found"
+msgstr "fann ikkje nokon grafikkmotor"
+
+#: src/scriptpo.c:92
+msgid "no snd backend found"
+msgstr "fann ikkje nokon lydmotor"
+
+#: src/scriptpo.c:93
+msgid "gfx backend ~a not available"
+msgstr "grafikkmotoren ~a er ikkje tilgjengeleg"
+
+#: src/scriptpo.c:94
+msgid "snd backend ~a not available"
+msgstr "lydmotoren ~a er ikkje tilgjengeleg"
+
+#: src/scriptpo.c:95 src/scriptpo.c:114 src/scriptpo.c:121
 msgid "Quick start"
 msgstr "Snøggstart"
 
-#: src/scriptpo.c:126
+#: src/scriptpo.c:99 src/scriptpo.c:108 src/scriptpo.c:109 src/scriptpo.c:119
+#: src/scriptpo.c:133
+msgid "Options"
+msgstr "Oppsett"
+
+#: src/scriptpo.c:100
 msgid "Welcome to Liquid War 6"
 msgstr "Velkommen til Liquid War 6"
 
-#~ msgid "Exit?"
-#~ msgstr "Vil du avslutta?"
+#: src/scriptpo.c:103
+msgid "Map"
+msgstr "Kart"
 
-#~ msgid "Exit"
-#~ msgstr "Avslutt"
+#: src/scriptpo.c:104
+msgid "Video"
+msgstr "Video"
 
-#~ msgid "Resume LW6"
-#~ msgstr "Hald fram LW 6"
+#: src/scriptpo.c:105 src/scriptpo.c:135
+msgid "Sound"
+msgstr "Lyd"
 
-#~ msgid "Liquid War 6"
-#~ msgstr "Liquid War 6"
+#: src/scriptpo.c:106
+msgid "System"
+msgstr "System"
 
-#~ msgid "Network game"
-#~ msgstr "Nettverksspel"
+#: src/scriptpo.c:107
+msgid "Stop current game"
+msgstr "Stopp spelet"
 
-#~ msgid "Level"
-#~ msgstr "Brett"
+#: src/scriptpo.c:110
+msgid "Exit?"
+msgstr "Vil du avslutta?"
 
-#~ msgid "Teams"
-#~ msgstr "Lag"
+#: src/scriptpo.c:111
+msgid "Exit"
+msgstr "Avslutt"
 
-#~ msgid "About"
-#~ msgstr "Om"
+#: src/scriptpo.c:112
+msgid "Resume LW6"
+msgstr "Hald fram LW 6"
 
-#~ msgid "Authors"
-#~ msgstr "Utviklarar"
+#: src/scriptpo.c:113
+msgid "Liquid War 6"
+msgstr "Liquid War 6"
 
-#~ msgid "Copyright"
-#~ msgstr "Opphavsrett"
+#: src/scriptpo.c:116
+msgid "Network game"
+msgstr "Nettverksspel"
 
-#~ msgid "License"
-#~ msgstr "Lisens"
+#: src/scriptpo.c:117 src/scriptpo.c:132
+msgid "Level"
+msgstr "Brett"
 
-#~ msgid "Version"
-#~ msgstr "Versjon"
+#: src/scriptpo.c:118
+msgid "Teams"
+msgstr "Lag"
 
-#~ msgid "View level"
-#~ msgstr "Vis brett"
+#: src/scriptpo.c:120 src/scriptpo.c:122
+msgid "About"
+msgstr "Om"
 
-#~ msgid "Confirm level choice"
-#~ msgstr "Stadfest brettval"
+#: src/scriptpo.c:123
+msgid "Authors"
+msgstr "Utviklarar"
 
-#~ msgid "Choose it"
-#~ msgstr "Vel det"
+#: src/scriptpo.c:124
+msgid "Copyright"
+msgstr "Opphavsrett"
 
-#~ msgid "View"
-#~ msgstr "Vis"
+#: src/scriptpo.c:125
+msgid "License"
+msgstr "Lisens"
 
-#~ msgid "Cancel"
-#~ msgstr "Avbryt"
+#: src/scriptpo.c:126
+msgid "Version"
+msgstr "Versjon"
 
-#~ msgid "Graphics"
-#~ msgstr "Bilete"
+#: src/scriptpo.c:127
+msgid "View level"
+msgstr "Vis brett"
 
-#~ msgid "Graphics options"
-#~ msgstr "Biletoppsett"
+#: src/scriptpo.c:128
+msgid "Confirm level choice"
+msgstr "Stadfest brettval"
 
-#~ msgid "Graphics backend"
-#~ msgstr "Grafikkmotor"
+#: src/scriptpo.c:129
+msgid "Choose it"
+msgstr "Vel det"
 
-#~ msgid "Sound fx volume"
-#~ msgstr "Lydstyrke: lydeffektar"
+#: src/scriptpo.c:130
+msgid "View"
+msgstr "Vis"
 
-#~ msgid "Music volume"
-#~ msgstr "Lydstyrke: musikk"
+#: src/scriptpo.c:131
+msgid "Cancel"
+msgstr "Avbryt"
 
-#~ msgid "Sound backend"
-#~ msgstr "Lydmotor"
+#: src/scriptpo.c:134
+msgid "Graphics"
+msgstr "Bilete"
+
+#: src/scriptpo.c:136
+msgid "Graphics options"
+msgstr "Biletoppsett"
+
+#: src/scriptpo.c:138 src/scriptpo.c:143
+msgid "Graphics backend"
+msgstr "Grafikkmotor"
+
+#: src/scriptpo.c:139 src/scriptpo.c:163
+msgid "Sound options"
+msgstr "Lydoppsett"
+
+#: src/scriptpo.c:140
+msgid "Sound fx volume"
+msgstr "Lydstyrke: lydeffektar"
+
+#: src/scriptpo.c:141
+msgid "Music volume"
+msgstr "Lydstyrke: musikk"
+
+#: src/scriptpo.c:142 src/scriptpo.c:144
+msgid "Sound backend"
+msgstr "Lydmotor"
+
+#: src/scriptpo.c:145
+msgid "Mouse"
+msgstr "Mus"
+
+#: src/scriptpo.c:146
+msgid "Keyboard"
+msgstr "Tastatur"
+
+#: src/scriptpo.c:147
+msgid "Joystick 1"
+msgstr "Styrespak 1"
+
+#: src/scriptpo.c:148
+msgid "Joystick 2"
+msgstr "Styrespak 2"
+
+#: src/scriptpo.c:149
+msgid "Custom"
+msgstr "Tilpassa"
+
+#: src/scriptpo.c:150 src/scriptpo.c:155
+msgid "~a (mouse)"
+msgstr "~a (mus)"
+
+#: src/scriptpo.c:151
+msgid "~a (keyb)"
+msgstr "~a (tastar)"
+
+#: src/scriptpo.c:152
+msgid "~a (joy1)"
+msgstr "~a (spak1)"
+
+#: src/scriptpo.c:153
+msgid "~a (joy2)"
+msgstr "~a (spak2)"
+
+#: src/scriptpo.c:154
+msgid "~a (custom)"
+msgstr "~a (tilpassa)"
+
+#: src/scriptpo.c:156
+msgid "No sound FX"
+msgstr "Ingen lydeffektar"
+
+#: src/scriptpo.c:157
+msgid "Sound FX ~a%"
+msgstr "Lydeffekt ~a%"
+
+#: src/scriptpo.c:158
+#, fuzzy
+msgid "No water sounds"
+msgstr "Ingen lydeffektar"
+
+#: src/scriptpo.c:159
+msgid "Water sounds ~a%"
+msgstr ""
+
+#: src/scriptpo.c:160
+msgid "No music"
+msgstr "Ingen musikk"
+
+#: src/scriptpo.c:161
+msgid "Music ~a%"
+msgstr "Musikk ~a%"
 
 #~ msgid "See log file for details."
 #~ msgstr "Sjå loggfila for meir informasjon."
