--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -2801,6 +2801,8 @@ Here's the list of the requirements:
 
 @itemize
 @item
+@url{http://www.libsdl.org/, SDL}. 1.2.14 works zith the following settings: @code{./configure --prefix=$GP2X_USER_PREFIX --build=x86_64-pc-linux-gnu --host=arm-open2x-linux --disable-pulseaudio --disable-video-directfb}
+@item
 @uref{http://www.gnu.org/software/libtool/, libtool}. Install a 1.5.x version,
 and not 2.2.x. For some reasons, 2.2.x is unusable, it keeps on complaining that
 @uref{http://lists.cistron.nl/pipermail/freeradius-users/2009-September/msg00149.html, lt_libltdl_LTX_preloaded_symbols is not defined}.
