score pie-chart partially implemented

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,6 +1,6 @@
 2011-07-22 : Christian Mauduit <ufoot@ufoot.org>
 
-	* Preparing score display.
+	* Score pie-chart partially implemented.
 
 2011-07-07 : Christian Mauduit <ufoot@ufoot.org>
 
