Pie-chart OK (at least for basic stuff)

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,6 +1,6 @@
 2011-07-22 : Christian Mauduit <ufoot@ufoot.org>
 
-	* Score pie-chart partially implemented.
+	* Basic score pie-chart implemented.
 
 2011-07-07 : Christian Mauduit <ufoot@ufoot.org>
 
