--- a/liquidwar6/doc/ker-gdoc.texi
+++ b/liquidwar6/doc/ker-gdoc.texi
@@ -553,6 +553,20 @@ call this if you're sure there's a fighter here.
 @strong{Return value:}  pointer to the fighter at this position, or NULL if none.
 @end deftypefun
 
+@deftypefun {int} {lw6ker_game_state_get_zone_potential} (lw6ker_game_state_t * @var{game_state}, int @var{i}, int @var{team_id})
+@var{game_state}:  the game_state to query
+
+@var{i}:  the zone index
+
+@var{team_id}:  the team id (color)
+
+Gets the potential of a zone. In practice this is not needed to
+make the game function, you need not call this to know how to move
+fighters, however the information can be interesting for debugging.
+
+@strong{Return value:}  the potential
+@end deftypefun
+
 @deftypefun {lw6ker_game_struct_t *} {lw6ker_game_struct_new} (lw6map_level_t * @var{level}, lw6sys_progress_t * @var{progress})
 @var{level}:  the level on which the game_struct is based
 
@@ -688,6 +702,34 @@ Tests wether a given position is foreground, that is, occupied by a wall.
 Tests wether a given position is background, that is, there's no wall.
 
 @strong{Return value:}  1 if background (wall, fighters can move), 0 if not
+@end deftypefun
+
+@deftypefun {void} {lw6ker_game_struct_get_zones_info} (lw6ker_game_struct_t * @var{game_struct}, int * @var{nb_zones}, int * @var{max_zone_size})
+@var{game_struct}:  game_struct to query
+
+@var{nb_zones}:  the maximum zone size (out param, can be NULL)
+
+@var{max_zone_size}:  the maximum zone size (out param, can be NULL)
+
+This function gets information about the internal zoning system, can
+be used for debugging.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6ker_game_struct_get_zone_info} (lw6ker_game_struct_t * @var{game_struct}, int @var{i}, lw6sys_xyz_t * @var{zone_pos}, int * @var{zone_size})
+@var{game_struct}:  game_struct to query
+
+@var{i}:  index of the zone to query
+
+@var{zone_pos}:  coord of the zone, top-left corner (out param, can be NULL)
+
+@var{zone_size}:  size of the zone (out param, can be NULL)
+
+This function gets information about the internal zoning system, can
+be used for debugging.
+
+@strong{Return value:}  none
 @end deftypefun
 
 @deftypefun {int} {lw6ker_score_array_update} (lw6ker_score_array_t * @var{score_array}, lw6ker_game_state_t * @var{game_state})
