--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,9 @@
 2011-07-24 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Changed cursor get/set API.
+
+2011-07-24 : Christian Mauduit <ufoot@ufoot.org>
+
 	* Most ker structs now hidden for maintainability.
 
 2011-07-22 : Christian Mauduit <ufoot@ufoot.org>
